:cocktail: Modules Routes :train:

--- a/index.html
+++ b/index.html
@@ -6,34 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>AngularJS Fun</title>
+    <base href="/">
 </head>
 
 <body>
-
-    <div class="container" ng-init="customers=[{name:'stephen ó connor',city: 'Dublin'},  { name: 'Ste', city: 'Kerry' }, {name: 'lobsang',city: 'Manali'}, {name:'Norbu',city: 'Manali'}, {name:'vikas',city: 'Delhi'}]">
-
-        <h3>Looping with the ng-repeat Directive</h3>
-
-        Name:
-        <input type="text" ng-model="name">
-
-        <ul>
-            <li ng-repeat="customer in customers | filter:name | orderBy:'city'">
-                {{ customer.name | capitalize }} - {{ customer.city | uppercase }}
-            </li>
-        </ul>
-
-        <!-- <input type="text" ng-model="nameText">
-
-        <ul>
-            <li ng-repeat="customer in customers | filter:nameText 
-            orderBy: 'name'"></li>
-
-            {{ customer.name }} - {{ customer.city }}
-        </ul> -->
-    </div>
+    <!-- view placeholder -->
+    <div ng-view=""></div>
 
     <script src="angular/angular.min.js"></script>
+    <script src="angular/angular-route.min.js"></script>
+    <script src="app.js"></script>
     <script src="controller.js"></script>
 </body>
 
